--- a/frontend-Hotel/src/app/components/Cliente/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Cliente/getall/getall.html
@@ -1,1 +1,78 @@
-<p>getall works!</p>
+<div class="card p-8">
+    <div class="flex justify-between items-center mb-4">
+        <h2 class="text-2xl font-bold">Gestión de Clientes</h2>
+        <p-button
+            label="Nuevo Cliente"
+            icon="pi pi-plus"
+            [routerLink]="['/Cliente/new']"
+            styleClass="p-button-success"
+        ></p-button>
+    </div>
+
+    <p-table 
+        [value]="Cliente" 
+        [loading]="loading"
+        [paginator]="true"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
+        [rowsPerPageOptions]="[5, 10, 25, 50]"
+        dataKey="id"
+        styleClass="p-datatable-striped"
+        [tableStyle]="{'min-width': '50rem'}"
+    >
+        <ng-template pTemplate="header">
+            <tr>
+                <th pSortableColumn="id">
+                    ID <p-sortIcon field="id"></p-sortIcon>
+                </th>
+                <th pSortableColumn="first_name">
+                    Nombre <p-sortIcon field="first_name"></p-sortIcon>
+                </th>
+                <th pSortableColumn="last_name">
+                    Apellido <p-sortIcon field="last_name"></p-sortIcon>
+                </th>
+                <th pSortableColumn="document">
+                    Documento <p-sortIcon field="document"></p-sortIcon>
+                </th>
+                <th pSortableColumn="phone">
+                    Teléfono <p-sortIcon field="phone"></p-sortIcon>
+                </th>
+                <th pSortableColumn="email">
+                    Email <p-sortIcon field="email"></p-sortIcon>
+                </th>
+                <th pSortableColumn="nationality">
+                    Nacionalidad <p-sortIcon field="nationality"></p-sortIcon>
+                </th>
+                <th class="text-center">Acciones</th>
+            </tr>
+        </ng-template>
+
+        <ng-template pTemplate="body" let-cliente>
+            <tr>
+                <td>{{ cliente.id }}</td>
+                <td>{{ cliente.first_name }}</td>
+                <td>{{ cliente.last_name }}</td>
+                <td>{{ cliente.document }}</td>
+                <td>{{ cliente.phone }}</td>
+                <td>{{ cliente.email }}</td>
+                <td>{{ cliente.nationality }}</td>
+                <td class="text-center">
+                    <div class="flex justify-center gap-2">
+                        <p-button icon="pi pi-pencil" [routerLink]="['/Cliente/edit', cliente.id]" styleClass="p-button-rounded p-button-text p-button-warning" pTooltip="Editar" tooltipPosition="top"></p-button>
+                        <p-button icon="pi pi-trash" (onClick)="confirmDelete(cliente)" styleClass="p-button-rounded p-button-text p-button-danger" pTooltip="Eliminar" tooltipPosition="top"></p-button>
+                    </div>
+                </td>
+            </tr>
+        </ng-template>
+
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="8" class="text-center p-4">No se encontraron registros</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
+
+<p-confirmDialog></p-confirmDialog>
+<p-toast></p-toast>
