--- a/frontend-Hotel/src/app/components/Reserva/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Reserva/getall/getall.html
@@ -1,1 +1,84 @@
-<p>getall works!</p>
+<div class="container">
+  <p-toast></p-toast>
+  <p-confirmDialog></p-confirmDialog>
+
+  <div class="card">
+    <p-table
+      #dt
+      [value]="reservations"
+      [loading]="loading"
+      [paginator]="true"
+      [rows]="10"
+      [rowsPerPageOptions]="[10, 25, 50]"
+      [globalFilterFields]="['client_id', 'room_id', 'start_date', 'end_date', 'total_price', 'status']"
+      responsiveLayout="scroll"
+    >
+      <ng-template pTemplate="caption">
+        <div class="table-header">
+          <h2 class="table-title">Reservas</h2>
+          <div class="table-actions">
+            <button
+              pButton
+              pRipple
+              label="Crear"
+              icon="pi pi-plus"
+              class="p-button-success"
+              routerLink="/Reserva/create"
+            ></button>
+          </div>
+        </div>
+      </ng-template>
+
+      <ng-template pTemplate="header">
+        <tr>
+          <th pSortableColumn="client_id">Cliente <p-sortIcon field="client_id"></p-sortIcon></th>
+          <th pSortableColumn="room_id">Habitación <p-sortIcon field="room_id"></p-sortIcon></th>
+          <th pSortableColumn="start_date">Fecha de Inicio <p-sortIcon field="start_date"></p-sortIcon></th>
+          <th pSortableColumn="end_date">Fecha de Fin <p-sortIcon field="end_date"></p-sortIcon></th>
+          <th pSortableColumn="total_price">Precio Total <p-sortIcon field="total_price"></p-sortIcon></th>
+          <th pSortableColumn="status">Estado <p-sortIcon field="status"></p-sortIcon></th>
+          <th>Acciones</th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-reservation>
+        <tr>
+          <td>{{ reservation.client_id }}</td>
+          <td>{{ reservation.room_id }}</td>
+          <td>{{ reservation.start_date | date: 'dd/MM/yyyy' }}</td>
+          <td>{{ reservation.end_date | date: 'dd/MM/yyyy' }}</td>
+          <td>{{ reservation.total_price | currency:'USD' }}</td>
+          <td>{{ reservation.status }}</td>
+          <td>
+            <div class="action-buttons">
+              <button
+                pButton
+                pRipple
+                icon="pi pi-pencil"
+                class="p-button-rounded p-button-warning"
+                [routerLink]="['/Reserva/update', reservation.id]"
+                pTooltip="Editar"
+                tooltipPosition="top"
+              ></button>
+              <button
+                pButton
+                pRipple
+                icon="pi pi-trash"
+                class="p-button-rounded p-button-danger"
+                (click)="confirmDelete(reservation)"
+                pTooltip="Eliminar"
+                tooltipPosition="top"
+              ></button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="7" class="text-center">No se encontraron reservas.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</div>
