--- a/frontend-Hotel/src/app/components/Tarifa/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Tarifa/getall/getall.html
@@ -1,1 +1,82 @@
-<p>getall works!</p>
+<div class="container">
+  <p-toast></p-toast>
+  <p-confirmDialog></p-confirmDialog>
+
+  <div class="card">
+    <p-table
+      #dt
+      [value]="rates"
+      [loading]="loading"
+      [paginator]="true"
+      [rows]="10"
+      [rowsPerPageOptions]="[10, 25, 50]"
+      [globalFilterFields]="['name', 'description', 'price']"
+      responsiveLayout="scroll"
+    >
+      <ng-template pTemplate="caption">
+        <div class="table-header">
+          <h2 class="table-title">Tarifas</h2>
+          <div class="table-actions">
+            <button
+              pButton
+              pRipple
+              label="Crear"
+              icon="pi pi-plus"
+              class="p-button-success"
+              routerLink="/Tarifa/create"
+            ></button>
+          </div>
+        </div>
+      </ng-template>
+
+      <ng-template pTemplate="header">
+        <tr>
+          <th pSortableColumn="name">Nombre <p-sortIcon field="name"></p-sortIcon></th>
+          <th pSortableColumn="description">Descripción <p-sortIcon field="description"></p-sortIcon></th>
+          <th pSortableColumn="price">Precio <p-sortIcon field="price"></p-sortIcon></th>
+          <th pSortableColumn="room_type_id">Tipo de Habitación <p-sortIcon field="room_type_id"></p-sortIcon></th>
+          <th pSortableColumn="season_id">Temporada <p-sortIcon field="season_id"></p-sortIcon></th>
+          <th>Acciones</th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-rate>
+        <tr>
+          <td>{{ rate.name }}</td>
+          <td>{{ rate.description }}</td>
+          <td>{{ rate.price | currency:'USD' }}</td>
+          <td>{{ rate.room_type_id }}</td>
+          <td>{{ rate.season_id }}</td>
+          <td>
+            <div class="action-buttons">
+              <button
+                pButton
+                pRipple
+                icon="pi pi-pencil"
+                class="p-button-rounded p-button-warning"
+                [routerLink]="['/Tarifa/update', rate.id]"
+                pTooltip="Editar"
+                tooltipPosition="top"
+              ></button>
+              <button
+                pButton
+                pRipple
+                icon="pi pi-trash"
+                class="p-button-rounded p-button-danger"
+                (click)="confirmDelete(rate)"
+                pTooltip="Eliminar"
+                tooltipPosition="top"
+              ></button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="6" class="text-center">No se encontraron tarifas.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</div>
