--- a/frontend-Hotel/src/app/components/Temporada/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Temporada/getall/getall.html
@@ -1,1 +1,60 @@
-<p>getall works!</p>
+<div class="card p-8">
+    <div class="flex justify-between items-center mb-4">
+        <h2 class="text-2xl font-bold">Gestión de Temporadas</h2>
+        <p-button
+            label="Nueva Temporada"
+            icon="pi pi-plus"
+            [routerLink]="['/Temporada/new']"
+            styleClass="p-button-success"
+        ></p-button>
+    </div>
+
+    <p-table 
+        [value]="seasons" 
+        [loading]="loading"
+        [paginator]="true"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
+        [rowsPerPageOptions]="[5, 10, 25, 50]"
+        dataKey="id"
+        styleClass="p-datatable-striped"
+        [tableStyle]="{'min-width': '50rem'}"
+    >
+        <ng-template pTemplate="header">
+            <tr>
+                <th pSortableColumn="id">ID <p-sortIcon field="id"></p-sortIcon></th>
+                <th pSortableColumn="name">Nombre <p-sortIcon field="name"></p-sortIcon></th>
+                <th pSortableColumn="start_date">Fecha de Inicio <p-sortIcon field="start_date"></p-sortIcon></th>
+                <th pSortableColumn="end_date">Fecha de Fin <p-sortIcon field="end_date"></p-sortIcon></th>
+                <th pSortableColumn="price_multiplier">Multiplicador de Precio <p-sortIcon field="price_multiplier"></p-sortIcon></th>
+                <th class="text-center">Acciones</th>
+            </tr>
+        </ng-template>
+
+        <ng-template pTemplate="body" let-season>
+            <tr>
+                <td>{{ season.id }}</td>
+                <td>{{ season.name }}</td>
+                <td>{{ season.start_date | date:'dd/MM/yyyy' }}</td>
+                <td>{{ season.end_date | date:'dd/MM/yyyy' }}</td>
+                <td>{{ season.price_multiplier }}x</td>
+                <td class="text-center">
+                    <div class="flex justify-center gap-2">
+                        <p-button icon="pi pi-pencil" [routerLink]="['/Temporada/edit', season.id]" styleClass="p-button-rounded p-button-text p-button-warning" pTooltip="Editar" tooltipPosition="top"></p-button>
+                        <p-button icon="pi pi-trash" (onClick)="confirmDelete(season)" styleClass="p-button-rounded p-button-text p-button-danger" pTooltip="Eliminar" tooltipPosition="top"></p-button>
+                    </div>
+                </td>
+            </tr>
+        </ng-template>
+
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="6" class="text-center p-4">No se encontraron registros</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
+
+<p-confirmDialog></p-confirmDialog>
+<p-toast></p-toast>
