--- a/frontend-Hotel/src/app/components/TipoHabitacion/getall/getall.html
+++ b/frontend-Hotel/src/app/components/TipoHabitacion/getall/getall.html
@@ -1,1 +1,70 @@
-<p>getall works!</p>
+<div class="card p-8">
+    <div class="flex justify-between items-center mb-4">
+        <h2 class="text-2xl font-bold">Gestión de Tipos de Habitación</h2>
+        <p-button
+            label="Nuevo Tipo"
+            icon="pi pi-plus"
+            [routerLink]="['/TipoHabitacion/new']"
+            styleClass="p-button-success"
+        ></p-button>
+    </div>
+
+    <p-table 
+        [value]="roomTypes" 
+        [loading]="loading"
+        [paginator]="true"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
+        [rowsPerPageOptions]="[5, 10, 25, 50]"
+        dataKey="id"
+        styleClass="p-datatable-striped"
+        [tableStyle]="{'min-width': '50rem'}"
+    >
+        <ng-template pTemplate="header">
+            <tr>
+                <th pSortableColumn="id">
+                    ID <p-sortIcon field="id"></p-sortIcon>
+                </th>
+                <th pSortableColumn="name">
+                    Nombre <p-sortIcon field="name"></p-sortIcon>
+                </th>
+                <th pSortableColumn="description">
+                    Descripción <p-sortIcon field="description"></p-sortIcon>
+                </th>
+                <th pSortableColumn="max_people">
+                    Max. Personas <p-sortIcon field="max_people"></p-sortIcon>
+                </th>
+                <th pSortableColumn="includes_breakfast">
+                    Incluye Desayuno <p-sortIcon field="includes_breakfast"></p-sortIcon>
+                </th>
+                <th class="text-center">Acciones</th>
+            </tr>
+        </ng-template>
+
+        <ng-template pTemplate="body" let-roomType>
+            <tr>
+                <td>{{ roomType.id }}</td>
+                <td>{{ roomType.name }}</td>
+                <td>{{ roomType.description }}</td>
+                <td>{{ roomType.max_people }}</td>
+                <td>{{ roomType.includes_breakfast ? 'Sí' : 'No' }}</td>
+                <td class="text-center">
+                    <div class="flex justify-center gap-2">
+                        <p-button icon="pi pi-pencil" [routerLink]="['/TipoHabitacion/edit', roomType.id]" styleClass="p-button-rounded p-button-text p-button-warning" pTooltip="Editar" tooltipPosition="top"></p-button>
+                        <p-button icon="pi pi-trash" (onClick)="confirmDelete(roomType)" styleClass="p-button-rounded p-button-text p-button-danger" pTooltip="Eliminar" tooltipPosition="top"></p-button>
+                    </div>
+                </td>
+            </tr>
+        </ng-template>
+
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="6" class="text-center p-4">No se encontraron registros</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
+
+<p-confirmDialog></p-confirmDialog>
+<p-toast></p-toast>
