--- a/frontend-Hotel/src/app/components/Pago/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Pago/getall/getall.html
@@ -1,1 +1,60 @@
-<p>getall works!</p>
+<div class="card p-8">
+    <div class="flex justify-between items-center mb-4">
+        <h2 class="text-2xl font-bold">Gestión de Pagos</h2>
+        <p-button
+            label="Nuevo Pago"
+            icon="pi pi-plus"
+            (click)="createPayment()"
+            styleClass="p-button-success"
+        ></p-button>
+    </div>
+
+    <p-table 
+        [value]="payments" 
+        [loading]="loading"
+        [paginator]="true"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
+        [rowsPerPageOptions]="[5, 10, 25, 50]"
+        dataKey="id"
+        styleClass="p-datatable-striped"
+        [tableStyle]="{'min-width': '50rem'}"
+    >
+        <ng-template pTemplate="header">
+            <tr>
+                <th pSortableColumn="id">ID <p-sortIcon field="id"></p-sortIcon></th>
+                <th pSortableColumn="reservation_id">Reserva ID <p-sortIcon field="reservation_id"></p-sortIcon></th>
+                <th pSortableColumn="amount">Monto <p-sortIcon field="amount"></p-sortIcon></th>
+                <th pSortableColumn="method">Método <p-sortIcon field="method"></p-sortIcon></th>
+                <th pSortableColumn="payment_date">Fecha <p-sortIcon field="payment_date"></p-sortIcon></th>
+                <th class="text-center">Acciones</th>
+            </tr>
+        </ng-template>
+
+        <ng-template pTemplate="body" let-payment>
+            <tr>
+                <td>{{ payment.id }}</td>
+                <td>{{ payment.reservation_id }}</td>
+                <td>{{ payment.amount | currency }}</td>
+                <td>{{ payment.method }}</td>
+                <td>{{ payment.payment_date | date: 'dd/MM/yyyy' }}</td>
+                <td class="text-center">
+                    <div class="flex justify-center gap-2">
+                        <p-button icon="pi pi-pencil" (click)="editPayment(payment.id)" styleClass="p-button-rounded p-button-text p-button-warning" pTooltip="Editar" tooltipPosition="top"></p-button>
+                        <p-button icon="pi pi-trash" (click)="confirmDelete(payment)" styleClass="p-button-rounded p-button-text p-button-danger" pTooltip="Eliminar" tooltipPosition="top"></p-button>
+                    </div>
+                </td>
+            </tr>
+        </ng-template>
+
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="6" class="text-center p-4">No se encontraron pagos.</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
+
+<p-confirmDialog></p-confirmDialog>
+<p-toast></p-toast>
