--- a/frontend-Hotel/src/app/components/Servicio/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Servicio/getall/getall.html
@@ -1,78 +1,56 @@
-<div class="container">
-  <p-toast></p-toast>
-  <p-confirmDialog></p-confirmDialog>
+<div class="card p-8">
+    <div class="flex justify-between items-center mb-4">
+        <h2 class="text-2xl font-bold">Gestión de Servicios</h2>
+        <p-button
+            label="Nuevo Servicio"
+            icon="pi pi-plus"
+            [routerLink]="['/Servicio/new']"
+            styleClass="p-button-success"
+        ></p-button>
+    </div>
 
-  <div class="card">
-    <p-table
-      #dt
-      [value]="services"
-      [loading]="loading"
-      [paginator]="true"
-      [rows]="10"
-      [rowsPerPageOptions]="[10, 25, 50]"
-      [globalFilterFields]="['name', 'description', 'price']"
-      responsiveLayout="scroll"
+    <p-table 
+        [value]="services" 
+        [loading]="loading"
+        [paginator]="true"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
+        [rowsPerPageOptions]="[5, 10, 25, 50]"
+        dataKey="id"
+        styleClass="p-datatable-striped"
+        [tableStyle]="{'min-width': '50rem'}"
     >
-      <ng-template pTemplate="caption">
-        <div class="table-header">
-          <h2 class="table-title">Servicios</h2>
-          <div class="table-actions">
-            <button
-              pButton
-              pRipple
-              label="Crear"
-              icon="pi pi-plus"
-              class="p-button-success"
-              routerLink="/Servicio/create"
-            ></button>
-          </div>
-        </div>
-      </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
+                <th pSortableColumn="name">Nombre <p-sortIcon field="name"></p-sortIcon></th>
+                <th pSortableColumn="description">Descripción <p-sortIcon field="description"></p-sortIcon></th>
+                <th pSortableColumn="price">Precio <p-sortIcon field="price"></p-sortIcon></th>
+                <th class="text-center">Acciones</th>
+            </tr>
+        </ng-template>
 
-      <ng-template pTemplate="header">
-        <tr>
-          <th pSortableColumn="name">Nombre <p-sortIcon field="name"></p-sortIcon></th>
-          <th pSortableColumn="description">Descripción <p-sortIcon field="description"></p-sortIcon></th>
-          <th pSortableColumn="price">Precio <p-sortIcon field="price"></p-sortIcon></th>
-          <th>Acciones</th>
-        </tr>
-      </ng-template>
+        <ng-template pTemplate="body" let-service>
+            <tr>
+                <td>{{ service.name }}</td>
+                <td>{{ service.description }}</td>
+                <td>{{ service.price | currency:'USD' }}</td>
+                <td class="text-center">
+                    <div class="flex justify-center gap-2">
+                        <p-button icon="pi pi-pencil" [routerLink]="['/Servicio/edit', service.id]" styleClass="p-button-rounded p-button-text p-button-warning" pTooltip="Editar" tooltipPosition="top"></p-button>
+                        <p-button icon="pi pi-trash" (click)="confirmDelete(service)" styleClass="p-button-rounded p-button-text p-button-danger" pTooltip="Eliminar" tooltipPosition="top"></p-button>
+                    </div>
+                </td>
+            </tr>
+        </ng-template>
 
-      <ng-template pTemplate="body" let-service>
-        <tr>
-          <td>{{ service.name }}</td>
-          <td>{{ service.description }}</td>
-          <td>{{ service.price | currency:'USD' }}</td>
-          <td>
-            <div class="action-buttons">
-              <button
-                pButton
-                pRipple
-                icon="pi pi-pencil"
-                class="p-button-rounded p-button-warning"
-                [routerLink]="['/Servicio/update', service.id]"
-                pTooltip="Editar"
-                tooltipPosition="top"
-              ></button>
-              <button
-                pButton
-                pRipple
-                icon="pi pi-trash"
-                class="p-button-rounded p-button-danger"
-                (click)="confirmDelete(service)"
-                pTooltip="Eliminar"
-                tooltipPosition="top"
-              ></button>
-            </div>
-          </td>
-        </tr>
-      </ng-template>
-
-      <ng-template pTemplate="emptymessage">
-        <tr>
-          <td colspan="4" class="text-center">No se encontraron servicios.</td>
-        </tr>
-      </ng-template>
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="4" class="text-center p-4">No se encontraron registros</td>
+            </tr>
+        </ng-template>
     </p-table>
-  </div>
 </div>
+
+<p-confirmDialog></p-confirmDialog>
+<p-toast></p-toast>
