subiendo a la nube 1

--- a/frontend-Hotel/src/app/components/Reserva/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Reserva/getall/getall.html
@@ -25,9 +25,9 @@
             <tr>
                 <th pSortableColumn="client_id">Cliente <p-sortIcon field="client_id"></p-sortIcon></th>
                 <th pSortableColumn="room_id">Habitación <p-sortIcon field="room_id"></p-sortIcon></th>
-                <th pSortableColumn="start_date">Fecha de Inicio <p-sortIcon field="start_date"></p-sortIcon></th>
-                <th pSortableColumn="end_date">Fecha de Fin <p-sortIcon field="end_date"></p-sortIcon></th>
-                <th pSortableColumn="total_price">Precio Total <p-sortIcon field="total_price"></p-sortIcon></th>
+                <th pSortableColumn="checkin_date">Fecha de Check-in <p-sortIcon field="checkin_date"></p-sortIcon></th>
+                <th pSortableColumn="checkout_date">Fecha de Check-out <p-sortIcon field="checkout_date"></p-sortIcon></th>
+                <th pSortableColumn="total_amount">Precio Total <p-sortIcon field="total_amount"></p-sortIcon></th>
                 <th pSortableColumn="status">Estado <p-sortIcon field="status"></p-sortIcon></th>
                 <th class="text-center">Acciones</th>
             </tr>
@@ -35,16 +35,19 @@
 
         <ng-template pTemplate="body" let-reservation>
             <tr>
-                <td>{{ reservation.client_id }}</td>
-                <td>{{ reservation.room_id }}</td>
-                <td>{{ reservation.start_date | date: 'dd/MM/yyyy' }}</td>
-                <td>{{ reservation.end_date | date: 'dd/MM/yyyy' }}</td>
-                <td>{{ reservation.total_price | currency:'USD' }}</td>
+                <td>{{ getClientName(reservation.client_id) }}</td>
+                <td>{{ getRoomNumber(reservation.room_id) }}</td>
+                <td>{{ reservation.checkin_date | date: 'dd/MM/yyyy' }}</td>
+                <td>{{ reservation.checkout_date | date: 'dd/MM/yyyy' }}</td>
+                <td>{{ reservation.total_amount | currency:'USD' }}</td>
                 <td>{{ reservation.status }}</td>
                 <td class="text-center">
                     <div class="flex justify-center gap-2">
                         <p-button icon="pi pi-pencil" [routerLink]="['/Reserva/edit', reservation.id]" styleClass="p-button-rounded p-button-text p-button-warning" pTooltip="Editar" tooltipPosition="top"></p-button>
                         <p-button icon="pi pi-trash" (click)="confirmDelete(reservation)" styleClass="p-button-rounded p-button-text p-button-danger" pTooltip="Eliminar" tooltipPosition="top"></p-button>
+                        <p-button *ngIf="reservation.status === 'CONFIRMED'" icon="pi pi-calendar-plus" [routerLink]="['/Reserva', reservation.id, 'checkin']" styleClass="p-button-rounded p-button-text p-button-success" pTooltip="Check-in" tooltipPosition="top"></p-button>
+                        <p-button *ngIf="reservation.status === 'CHECKED_IN'" icon="pi pi-calendar-minus" [routerLink]="['/Reserva', reservation.id, 'checkout']" styleClass="p-button-rounded p-button-text p-button-info" pTooltip="Check-out" tooltipPosition="top"></p-button>
+                        <p-button icon="pi pi-cog" [routerLink]="['/Reserva', reservation.id, 'services']" styleClass="p-button-rounded p-button-text p-button-help" pTooltip="Servicios" tooltipPosition="top"></p-button>
                     </div>
                 </td>
             </tr>
